Added first working version of a facility to test performance of TED algorithms.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
 # Create the project.
-project(ted-join-experiments)
+project(ted-experiments)
 
 # Compiler flags.
 # MUST be declared after project().
@@ -20,12 +20,6 @@ add_executable(
   ted-join-experiments # EXECUTABLE NAME
   src/experiments.cc   # EXECUTABLE SOURCE
 )
-
-# Link the timing library and header file.
-add_library(
-  TimingLibrary                              # LIBRARY NAME
-  external/common-code/timings/timing.cxx    # LIBRARY SOURCE
-)
 target_link_libraries(
   ted-join-experiments # TARGET EXECUTABLE NAME
   TimingLibrary        # LIBRARY NAME
@@ -33,6 +27,26 @@ target_link_libraries(
 target_include_directories(
   ted-join-experiments                # TARGET EXECUTABLE NAME
   PUBLIC external/common-code/timings # HEADER FILE
+)
+
+# Build executable with the experiments.
+add_executable(
+  ted-algs-experiments                   # EXECUTABLE NAME
+  src/ted_algs/ted_algs_experiments.cc   # EXECUTABLE SOURCE
+)
+target_link_libraries(
+  ted-algs-experiments # TARGET EXECUTABLE NAME
+  TimingLibrary        # LIBRARY NAME
+)
+target_include_directories(
+  ted-algs-experiments                # TARGET EXECUTABLE NAME
+  PUBLIC external/common-code/timings # HEADER FILE
+)
+
+# Create the timing library.
+add_library(
+  TimingLibrary                              # LIBRARY NAME
+  external/common-code/timings/timing.cxx    # LIBRARY SOURCE
 )
 
 # Create header-only library 'TreeSimilarity' with our algorithms.
@@ -56,5 +70,11 @@ target_include_directories(
 # Let the compiler know to find the header files in TreeSimilarity library.
 target_link_libraries(
   ted-join-experiments # EXECUTABLE NAME
+  TreeSimilarity       # LIBRARY NAME
+)
+
+# Let the compiler know to find the header files in TreeSimilarity library.
+target_link_libraries(
+  ted-algs-experiments # EXECUTABLE NAME
   TreeSimilarity       # LIBRARY NAME
 )
