added histogram based algorithms to join experiments

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,10 @@ target_include_directories(
   external/tree-similarity/src/join/tjoin
   external/tree-similarity/src/join/tang
   external/tree-similarity/src/join/naive
+  external/tree-similarity/src/join/binary_branches
+  external/tree-similarity/src/join/label_histogram
+  external/tree-similarity/src/join/degree_histogram
+  external/tree-similarity/src/join/leaf_dist_histogram
   external/tree-similarity/src/label
   external/tree-similarity/src/node
   external/tree-similarity/src/parser
