Convert into tjoin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,9 @@ project(ted-experiments)
 # Compiler flags.
 # MUST be declared after project().
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O0 -g")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -O0 -g")
 else ()
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O3")
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -O3")
 endif ()
 # Verify which timing implementation to use.
 # NOTE: Comes from common-code.
@@ -18,16 +18,16 @@ if(NOT HAVE_CLOCK_GETTIME)
   add_definitions(-DGETRUSAGE)
 endif()
 
-set(Boost_NO_WARN_NEW_VERSIONS 1)
-SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/home/lukas/school/boost_1_83_0")
-SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "/home/lukas/school/boost_1_83_0/stage/lib")
-set(Boost_USE_STATIC_LIBS OFF)
-set(Boost_USE_MULTITHREADED ON)
-set(Boost_USE_STATIC_RUNTIME OFF)
-find_package(Boost 1.83.0 REQUIRED COMPONENTS system iostreams)
-if (Boost_FOUND)
-  include_directories( ${Boost_INCLUDE_DIRS} )
-endif ()
+#set(Boost_NO_WARN_NEW_VERSIONS 1)
+#SET(CMAKE_INCLUDE_PATH ${CMAKE_INCLUDE_PATH} "/home/lukas/school/boost_1_83_0")
+#SET(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} "/home/lukas/school/boost_1_83_0/stage/lib")
+#set(Boost_USE_STATIC_LIBS OFF)
+#set(Boost_USE_MULTITHREADED ON)
+#set(Boost_USE_STATIC_RUNTIME OFF)
+#find_package(Boost 1.83.0 REQUIRED COMPONENTS system iostreams)
+#if (Boost_FOUND)
+#  include_directories( ${Boost_INCLUDE_DIRS} )
+#endif ()
 
 
 # Moravec APTED distance dataset calculator
@@ -36,32 +36,32 @@ add_executable(ted-ds-dist
         src/lb/ted_ds_dist.h
 )
 
-# Moravec LN experiments
-#add_executable(ted-lb-experiments
-#        src/lb/ted_lb_experiments.cpp
-#        src/lb/ted_lb_experiments.h
-#)
+# Moravec LB experiments
+add_executable(ted-lb-experiments
+        src/lb/ted_lb_experiments.cpp
+        src/lb/ted_lb_experiments.h
+)
 
 target_link_libraries(
     ted-ds-dist
     TimingLibrary
-    Boost::iostreams
+#    Boost::iostreams
 )
 
-#target_link_libraries(
-#        ted-lb-experiments
-#        TimingLibrary
-#)
+target_link_libraries(
+        ted-lb-experiments
+        TimingLibrary
+)
 
 target_include_directories(
       ted-ds-dist
       PUBLIC external/common-code/timings
 )
 #
-#target_include_directories(
-#        ted-lb-experiments
-#        PUBLIC external/common-code/timings
-#)
+target_include_directories(
+        ted-lb-experiments
+        PUBLIC external/common-code/timings
+)
 
 # Create the timing library.
 add_library(
@@ -108,8 +108,8 @@ target_link_libraries(
         Threads::Threads
 )
 # Let the compiler know to find the header files in TreeSimilarity library.
-#target_link_libraries(
-#        ted-lb-experiments
-#        TreeSimilarity
-#        Threads::Threads
-#)
+target_link_libraries(
+        ted-lb-experiments
+        TreeSimilarity
+        Threads::Threads
+)
